--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 	  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	  <script type="text/javascript" src="slick/slick.min.js"></script>	
-		
+	  <script type="text/javascript" src="slick/slick.min.js"></script>
+
 		<script type="text/javascript">
 	    $(document).ready(function(){
 	      $('.carousel').slick();
@@ -18,14 +18,46 @@
 	</head>
 
 	<body>
+		<div class="top">
+			<img src="Screen Shot 2018-02-02 at 13.02.21.png" width=100% height=100%>
+		</div>
+		<div class="middle">
+			<img src="middle.png" width=100% height=100%>
+		</div>
+		<div class="heading_and_sub">
+			<img src="2.png" width=100% height=100%>
+		</div>
+
 		<div class="carousel">
-		  <div><img src="https://i.pinimg.com/originals/f5/d9/63/f5d963b55a9becd3afb94409f8814966.jpg"></div>
-		  <div><img src="http://freefrontend.com/assets/img/css-carousels/react-vertical-carousel.jpg"></div>
-		  <div><img src="https://i.pinimg.com/originals/f5/d9/63/f5d963b55a9becd3afb94409f8814966.jpg"</div>
+		  <div><img src=new_partner_redo.png width=100% height=100%></div>
+		 <!-- <div><img src="partner_success.png" width=100% height=100%></div> -->
+		 <!-- <div><img src="in_your_shoes_1.png" width=100% height=100%></div> -->
+			<div><img src="chichi1v2.png" width=100% height=100%></div>
+			<div><img src="chichi_2.png" width=100% height=100%></div>
+			<div><img src="chichi3v2.png" width=100% height=100%></div>
+			<div><img src="in_your_shoes_4.png" width=100% height=100%></div>
+			<div><img src="from_lucy.png" width=100% height=100%></div>
+			<div><img src="ambassador_1.png" width=100% height=100%></div>
+			<div><img src="partner_profile.png" width=100% height=100%></div>
+			<div><img src="milestone.png" width=100% height=100%></div>
+		<!--	<div><img src="soremi_2.png" width=100% height=100%></div> -->
+			<div><img src="make_awards.png" width=100% height=100%></div>
+			<div><img src="make_awards_2.png" width=100% height=100%></div>
+			<div><img src="soremi.png" width=100% height=100%></div>
 		</div>
 
 
-	
+		<div class="inspo">
+			<img src="inspo.png" width=100% height=100%>
+		</div>
+		<img src="4th_bottom.png" width=100% height=100%>
+		<img src="3rd_bottom.png" width=100% height=100%>
+		<img src="2nd_bottom.png" width=100% height=100%>
+		<img src="bottom.png" width=100% height=100%>
+
+
+
+
 
 	</body>
 </html>
