--- a/index.html
+++ b/index.html
@@ -19,41 +19,41 @@
 
 	<body>
 		<div class="top">
-			<img src="Screen Shot 2018-02-02 at 13.02.21.png" width=100% height=100%>
+			<img src="assets/Screen Shot 2018-02-02 at 13.02.21.png" width=100% height=100%>
 		</div>
 		<div class="middle">
-			<img src="middle.png" width=100% height=100%>
+			<img src="assets/middle.png" width=100% height=100%>
 		</div>
 		<div class="heading_and_sub">
-			<img src="2.png" width=100% height=100%>
+			<img src="assets/2.png" width=100% height=100%>
 		</div>
 
 		<div class="carousel">
-		  <div><img src=new_partner_redo.png width=100% height=100%></div>
+		  <div><img src=assets/new_partner_redo.png width=100% height=100%></div>
 		 <!-- <div><img src="partner_success.png" width=100% height=100%></div> -->
 		 <!-- <div><img src="in_your_shoes_1.png" width=100% height=100%></div> -->
-			<div><img src="chichi1v2.png" width=100% height=100%></div>
-			<div><img src="chichi_2.png" width=100% height=100%></div>
-			<div><img src="chichi3v2.png" width=100% height=100%></div>
-			<div><img src="in_your_shoes_4.png" width=100% height=100%></div>
-			<div><img src="from_lucy.png" width=100% height=100%></div>
-			<div><img src="ambassador_1.png" width=100% height=100%></div>
-			<div><img src="partner_profile.png" width=100% height=100%></div>
-			<div><img src="milestone.png" width=100% height=100%></div>
+			<div><img src="assets/chichi1v2.png" width=100% height=100%></div>
+			<div><img src="assets/chichi_2.png" width=100% height=100%></div>
+			<div><img src="assets/chichi3v2.png" width=100% height=100%></div>
+			<div><img src="assets/in_your_shoes_4.png" width=100% height=100%></div>
+			<div><img src="assets/from_lucy.png" width=100% height=100%></div>
+			<div><img src="assets/ambassador_1.png" width=100% height=100%></div>
+			<div><img src="assets/partner_profile.png" width=100% height=100%></div>
+			<div><img src="assets/milestone.png" width=100% height=100%></div>
 		<!--	<div><img src="soremi_2.png" width=100% height=100%></div> -->
-			<div><img src="make_awards.png" width=100% height=100%></div>
-			<div><img src="make_awards_2.png" width=100% height=100%></div>
-			<div><img src="soremi.png" width=100% height=100%></div>
+			<div><img src="assets/make_awards.png" width=100% height=100%></div>
+			<div><img src="assets/make_awards_2.png" width=100% height=100%></div>
+			<div><img src="assets/soremi.png" width=100% height=100%></div>
 		</div>
 
 
 		<div class="inspo">
-			<img src="inspo.png" width=100% height=100%>
+			<img src="assets/inspo.png" width=100% height=100%>
 		</div>
-		<img src="4th_bottom.png" width=100% height=100%>
-		<img src="3rd_bottom.png" width=100% height=100%>
-		<img src="2nd_bottom.png" width=100% height=100%>
-		<img src="bottom.png" width=100% height=100%>
+		<img src="assets/4th_bottom.png" width=100% height=100%>
+		<img src="assets/3rd_bottom.png" width=100% height=100%>
+		<img src="assets/2nd_bottom.png" width=100% height=100%>
+		<img src="assets/bottom.png" width=100% height=100%>
 
 
 
